@@ -1,3 +1,10 @@
+2011-03-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-namespace-put-link): check if the target
+	name is fully qualified -- use only the name part.
+	(soap-parse-complex-type, soap-parse-sequence): recognize xsd:all
+	types, treated the same as xsd:sequence.
+
 2011-02-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-well-known-xmlns, soap-local-xmlns)
